nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    istio.io/use-waypoint: "waypoint"
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      name: http
