destinationrule-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: nginx-destination
spec:
  host: nginx-service.default.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: nginx-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - my-ingress-gateway
  http:
    - route:
        - destination:
            host: nginx-service.default.svc.cluster.local
            subset: v1
          weight: 50
        - destination:
            host: nginx-service.default.svc.cluster.local
            subset: v2
          weight: 50
